# app/controllers/usuarios_controller.rb
@@ -1,7 +1,7 @@
 class UsuariosController < ApplicationController
   before_action :set_usuario, only: [:show, :edit, :update, :destroy]
   before_action :verifica_permissao, only: [:edit, :create, :update, :destroy]
-  skip_before_action :verify_authenticity_token, only: [:zerar_saldo]
+  skip_before_action :verify_authenticity_token, only: [:zerar_saldo, :create_api]
   
   # GET /usuarios
   # GET /usuarios.json
@@ -108,6 +108,10 @@ class UsuariosController < ApplicationController
 
   # POST /usuarios
   # POST /usuarios.json
+  def create_api
+    create
+  end
+
   def create
     @usuario = Usuario.new(usuario_params)
     @usuario.responsavel = usuario_logado
@@ -183,8 +187,14 @@ class UsuariosController < ApplicationController
 
     # Never trust parameters from the scary internet, only allow the white list through.
     def usuario_params
-      params.require(:usuario).permit(:nome, :email, :senha, :perfil_usuario_id, 
-      :sub_agente_id, :status_cliente_id, :morada, :bairro, :municipio_id, 
-      :provincia_id, :industry_id, :uni_pessoal_empresa_id, :data_adesao, :telefone, :whatsapp)
+      if request.path_parameters[:format] == 'json'
+        params.permit(:nome, :email, :senha, :perfil_usuario_id, 
+          :sub_agente_id, :status_cliente_id, :morada, :bairro, :municipio_id, 
+          :provincia_id, :industry_id, :uni_pessoal_empresa_id, :data_adesao, :telefone, :whatsapp)
+      else
+        params.require(:usuario).permit(:nome, :email, :senha, :perfil_usuario_id, 
+          :sub_agente_id, :status_cliente_id, :morada, :bairro, :municipio_id, 
+          :provincia_id, :industry_id, :uni_pessoal_empresa_id, :data_adesao, :telefone, :whatsapp)
+      end
     end
 end
